--- a/fancy-star-diamonds/src/components/Collection/index.css
+++ b/fancy-star-diamonds/src/components/Collection/index.css
@@ -1,4 +1,4 @@
-.swiper {
+/* .swiper {
   width: 100%;
   padding-top: 50px;
   padding-bottom: 50px;
@@ -13,4 +13,4 @@
 .main-container img {
   display: block;
   width: 100px;
-}
+} */
