--- a/fancy-star-diamonds/src/index.css
+++ b/fancy-star-diamonds/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+h1 {
+  font-family: Noto Serif Display;
+}
+
 body {
   background: #fef4e9;
   font-family: poppins;
